# Software_Development

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
data/interim/: train.csv  val.csv
data/processed/: test.csv  train.csv  val.csv  x_scaler.joblib  y_scaler.joblib
docs/: index.html  modeling.html  my_project.html  search.js
docs/modeling/: predict.html  train.html
docs/my_project/: dataset.html  gradio.html  model.html  modeling.html
docs/my_project/gradio/: Data_Visualization_Interface.html  Performance_Analysis_Interface.html  Train_Interface.html  gradio_main.html
docs/my_project/modeling/: predict.html  train.html
house_price_prediction_joaquin_iker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
models/: house_price_regressor.ckpt  test_predictions.csv
my_project/: __init__.py  dataset.py  model.py
my_project/gradio/: Data_Visualization_Interface.py  Performance_Analysis_Interface.py  Train_Interface.py  __init__.py  gradio_main.py
my_project/modeling/: __init__.py  predict.py  train.py
notebooks/: Data_Visualization.ipynb  Performance_Analysis.ipynb  data_visualization.ipynb  practice1_full_pipeline.ipynb
notebooks/gradio/: Data_Visualization_Interface.py  Performance_Analysis_Interface.py  Train_Interface.py  gradio_main.py
notebooks/lightning_logs/version_0/: events.out.tfevents.1757963315.ORRADRE.11884.0  hparams.yaml
reports/: performance_report.typ
reports/figures/: top_abs_errors_table.csv
reports/logs/house_price/version_0/: metrics.csv
reports/logs/house_price/version_1/: metrics.csv
