[project]
name = "code"
version = "0.1.0"
description = "Sample environment for testing Pytorch and TensorFlow"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "lightning>=2.5.2",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy<2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
    "tensorboard>=2.18.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]
