[project]
name = "house_price_prediction_joaquin_iker"
version = "1.1.3"
description = "Academic project focused on understanding and practicing how to deploy a complete machine learning project, including dependency management, reproducible environments, and best practices in data science."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Iker U.", email = "ikerurdirozarroyo@gmail.com" },
    { name = "Joaquin O.", email = "joaquinorradre@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["pytorch", "tensorflow", "machine learning", "data science", "deep learning"]
dependencies = [
    "build>=1.3.0",
    "gradio>=5.49.1",
    "ipykernel>=6.30.1",
    "lightning>=2.5.2",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy<2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
    "tensorboard>=2.18.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "twine>=6.2.0",
]

[project.scripts]
house-price-prediction-joaquin-iker = "my_project.gradio.gradio_main:main"

[project.urls]
"Homepage" = "https://github.com/ikerua/Software_Development#readme"
"Documentation" = "https://ikerua.github.io/Software_Development/my_project.html"
"Repository" = "https://github.com/ikerua/Software_Development"

[dependency-groups]
dev = [
    "pdoc>=15.0.4",
    "typst>=0.13.7",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["my_project*", "data*"]
exclude = ["models*", "reports*", "notebooks*"]
